# langchain-google-spanner-python

./: .coveragerc  .gitignore  .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  renovate.json5  sync-repo-settings.yaml  trusted-contribution.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: chat_message_history.ipynb  conf.py  document_loader.ipynb  graph_qa_chain.ipynb  graph_rag.ipynb  graph_store.ipynb  index.rst  langgraph_checkpoint.ipynb  vector_store.ipynb
docs/langchain_google_spanner/: history.rst  loader.rst  vector_store.rst
samples/: langchain_quick_start.ipynb  main.py  search_ann.py
src/langchain_google_spanner/: __init__.py  chat_message_history.py  document_loader.py  graph_qa.py  graph_retriever.py  graph_store.py  graph_utils.py  langgraph_checkpoint.py  loader.py  prompts.py  type_utils.py  vector_store.py  version.py
src/tests/: document_loader_test.py
tests/: document_loader_test.py  test_spanner_loader.py
tests/integration/: test_spanner_chat_message_history.py  test_spanner_graph_qa.py  test_spanner_graph_retriever.py  test_spanner_graph_store.py  test_spanner_langgraph_checkpoint_integration.py  test_spanner_loader.py  test_spanner_vector_store.py
tests/unit/: test_spanner_langgraph_checkpoint.py  test_vectore_store.py
