[project]
name = "langchain-google-spanner"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Spanner"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "langchain==0.1.1",
    "google-cloud-spanner==3.41.0"
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_spanner.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-spanner-python"
Repository = "https://github.com/googleapis/langchain-google-spanner-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-spanner-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-spanner-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==23.12.0",
    "bs4==0.0.2",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
