[project]
name = "langchain-google-spanner"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Spanner"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.25, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "google-cloud-spanner>=3.41.0, <4.0.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_spanner.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-spanner-python"
Repository = "https://github.com/googleapis/langchain-google-spanner-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-spanner-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-spanner-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==24.4.2",
    "bs4==0.0.2",
    "isort==5.13.2",
    "mypy==1.10.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
