[project]
name = "langchain-google-spanner"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Spanner"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.25, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "google-cloud-spanner>=3.41.0, <4.0.0",
    "pydantic>=2.9.1, <3.0.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_spanner.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-spanner-python"
Repository = "https://github.com/googleapis/langchain-google-spanner-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-spanner-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-spanner-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
lint = [
    "black[jupyter]==24.10.0",
    "flake8==6.1.0",
    "isort==5.13.2",
]

test = [
    "black[jupyter]==24.10.0",
    "bs4==0.0.2",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.17.0",
    "pytest==8.4.1",
    "pytest-asyncio==0.26.0",
    "pytest-cov==5.0.0",
    "langchain_google_vertexai==2.0.27"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
warn_unused_configs = true
disallow_incomplete_defs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
